// The definition of mayastor gRPC interface.

// This interface is supposed to be independent on particular computing
// environment (i.e. kubernetes).

syntax = "proto3";

package mayastor.v1;

// Means no arguments or no return value.
message Null {}

// Anything what follows here are private interfaces used for interacting with
// mayastor outside the scope of CSI.

service BdevRpc {
  rpc List(Null) returns (Bdevs) {}
  rpc Create(BdevUri) returns (CreateReply) {}
  rpc Destroy(BdevUri) returns (Null) {}
  rpc Share(BdevShareRequest) returns (BdevShareReply) {}
  rpc Unshare(CreateReply) returns (Null) {}
}

message BdevShareRequest {
  string name = 1;
  string proto = 2;
}

message BdevShareReply {
  string uri = 1;
}

message Bdev {
  string name = 1;
  string uuid = 2;
  uint64 num_blocks = 3;
  uint32 blk_size = 5;
  bool claimed = 6;
  string claimed_by = 7;
  string aliases = 8;
  string uri = 9;
  string product_name = 10;
  string share_uri = 11;

}

message Bdevs {
  repeated Bdev bdevs = 1;
}

message BdevUri {
  string uri = 1;
}

message CreateReply {
  string name = 1;
}


// SPDK json-rpc proxy service

service JsonRpc {
  // Call a (SPDK) json-rpc method
  rpc JsonRpcCall (JsonRpcRequest) returns (JsonRpcReply) {}
}

message JsonRpcRequest {
  string method = 1;
  string params = 2;
}

message JsonRpcReply {
  string result = 1;
}