syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";

import "common.proto";
package mayastor.v1;

service ReplicaRpc {
  // Replica related methods.
  //
  // Replica allocates space from storage pool.
  rpc CreateReplica (CreateReplicaRequest) returns (Replica) {}
  rpc DestroyReplica (DestroyReplicaRequest) returns (google.protobuf.Empty) {}
  rpc ListReplicas (ListReplicaOptions) returns (ListReplicasResponse) {}
  rpc ShareReplica (ShareReplicaRequest) returns (Replica) {}
  rpc UnshareReplica (UnshareReplicaRequest) returns (Replica) {}
  rpc CreateReplicaSnapshot(CreateReplicaSnapshotRequest) returns (CreateReplicaSnapshotResponse) {}
  rpc ListReplicaSnapshot(ListReplicaSnapshotsRequest) returns (ListReplicaSnapshotsResponse) {}
  rpc DeleteReplicaSnapshot(DeleteReplicaSnapshotRequest) returns (google.protobuf.Empty) {}
}

// Replica space usage
message ReplicaSpaceUsage {
  uint64 capacity_bytes = 1; // replica capacity in bytes.
  uint64 allocated_bytes = 2; // amount of actually allocated disk space for this replica in bytes
  uint64 cluster_size = 3; // cluster size in bytes
  uint64 num_clusters = 4; // total number of clusters
  uint64 num_allocated_clusters = 5; // number of actually used clusters
}

// Replica properties
message Replica {
  string name = 1;  // name of the replica
  string uuid = 2;  // uuid of the replica
  string pooluuid = 3; // uuid of the pool on which replica is present
  uint64 size = 4;  // size of the replica in bytes
  bool thin = 5;    // thin provisioning
  ShareProtocol share = 6;  // protocol used for exposing the replica
  string uri = 7;   // uri under which the replica is accessible by nexus
  string poolname = 8; // name of the pool on which replica is present
  ReplicaSpaceUsage usage = 9; // replica space usage
  repeated string allowed_hosts = 10; // host (nqn's) which are allowed to connect to the target
}

message CreateReplicaRequest {
  string name = 1;  // name of the replica
  string uuid = 2;  // uuid of the replica
  string pooluuid = 3;  // uuid of the pool on which replica needs to be created.
  uint64 size = 4;  // size of the replica in bytes
  bool thin = 5;    // thin provisioning
  ShareProtocol share = 6;  // protocol to expose the replica over
  repeated string allowed_hosts = 7; // host (nqn's) which are allowed to connect to the target.
}

// Destroy replica arguments.
message DestroyReplicaRequest {
  string uuid = 1;  // uuid of the replica.
  oneof pool {
    string pool_name = 2; // name of the pool where the replica resides.
    string pool_uuid = 3; // optional uuid for the pool where the replica resides.
  }
}

// Share replica request.
message ShareReplicaRequest {
  string uuid = 1;  // uuid of the replica
  // protocol used for exposing the replica
  ShareProtocol share = 2;
  repeated string allowed_hosts = 3; // host (nqn's) which are allowed to connect to the target.
}

// Unshare replica request
message UnshareReplicaRequest {
  string uuid = 1;  // uuid of the replica
}

// List of replicas and their properties.
message ListReplicasResponse {
  repeated Replica replicas = 1;  // list of the replicas
}

message ListReplicaOptions {
  google.protobuf.StringValue name = 1; // list the replica with the name if provided
  google.protobuf.StringValue poolname = 2; // list the replicas on the provided pool, by name
  google.protobuf.StringValue uuid = 3; // list the replica with the uuid if provided
  google.protobuf.StringValue pooluuid = 4; // list the replicas on the provided pool, by uuid
}

// Create Replica Snapshot Request.
message CreateReplicaSnapshotRequest {
  string replica_uuid = 1;  // uuid of the replica
  string snapshot_uuid = 2; // uuid of the snapshot
  string snapshot_name = 3; // snapshot name
  string entity_id = 4;     // entity associated with this snapshot
  string txn_id = 5; // unique transaction id generate for snapshot creation
}

/// Create Replica Snapshot Response.
message CreateReplicaSnapshotResponse {
  string replica_uuid = 1; // UUID of the source replica
  ReplicaSnapshot snapshot = 2; // Snapshot detail information
}

/// List Replica Snapshot Request.
message ListReplicaSnapshotsRequest {
  string replica_uuid = 1;  // uuid of the replica to list snapshots for
}

/// Replica Snapshot Params to Return in ListSnapshot.
message ReplicaSnapshot {
  string snapshot_uuid = 1; // uuid of the snapshot
  string snapshot_name = 2; // name of the snapshot
  uint64 snapshot_size = 3; // amount of bytes referenced by snapshot
  uint64 num_clones = 4; // number of clones created from this snapshot
  google.protobuf.Timestamp timestamp = 5; // snapshot creation_timestamp
  string replica_uuid = 6; // uuid of the replica this snapshot is taken from
  uint64 replica_size = 7; // amount of bytes referenced by replica
  string entity_id = 8; // uuid of the entity for which snapshot is taken.
  string txn_id = 9; // unique transaction id for snapshot.
}

/// List Replica Snapshot Response.
message ListReplicaSnapshotsResponse {
  repeated ReplicaSnapshot snapshots = 1; // list of ReplicaSnapshot Params.
}
/// Delete Replica Snapshot Request.
message DeleteReplicaSnapshotRequest {
  string snapshot_uuid = 1; // snapshot to be deleted
}
